// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store/createStore with no options creates a store with no additional reducers 1`] = `
Object {
  "data": Object {
    "channels": Object {
      "byId": Object {},
      "search": Array [],
    },
    "communities": Object {
      "byId": Object {},
      "top": Array [],
    },
    "games": Object {
      "byId": Object {},
      "search": Array [],
      "top": Array [],
    },
    "session": Object {
      "token": null,
    },
    "streams": Object {
      "byId": Object {},
      "search": Array [],
      "top": Array [],
    },
  },
}
`;

exports[`store/createStore with reducers creates a store with the additional reducers 1`] = `
Object {
  "data": Object {
    "channels": Object {
      "byId": Object {},
      "search": Array [],
    },
    "communities": Object {
      "byId": Object {},
      "top": Array [],
    },
    "games": Object {
      "byId": Object {},
      "search": Array [],
      "top": Array [],
    },
    "session": Object {
      "token": null,
    },
    "streams": Object {
      "byId": Object {},
      "search": Array [],
      "top": Array [],
    },
  },
  "foo": Object {
    "bar": "baz",
  },
}
`;

exports[`store/createStore with reducers processes actions 1`] = `
Object {
  "data": Object {
    "channels": Object {
      "byId": Object {},
      "search": Array [],
    },
    "communities": Object {
      "byId": Object {},
      "top": Array [],
    },
    "games": Object {
      "byId": Object {},
      "search": Array [],
      "top": Array [],
    },
    "session": Object {
      "token": null,
    },
    "streams": Object {
      "byId": Object {},
      "search": Array [],
      "top": Array [],
    },
  },
  "foo": Object {
    "bar": "baz",
    "qux": "quux",
  },
}
`;

exports[`store/createStore with reducers processes thunk actions 1`] = `
Object {
  "data": Object {
    "channels": Object {
      "byId": Object {},
      "search": Array [],
    },
    "communities": Object {
      "byId": Object {},
      "top": Array [],
    },
    "games": Object {
      "byId": Object {},
      "search": Array [],
      "top": Array [],
    },
    "session": Object {
      "token": null,
    },
    "streams": Object {
      "byId": Object {},
      "search": Array [],
      "top": Array [],
    },
  },
  "foo": Object {
    "bar": "baz",
    "qux": "quux",
  },
}
`;
